# xpuort

./: .gitignore  CMakeLists.txt  README.md  XpuDriver.cpp  Xpuort.cpp  Xpuort.h  build.sh  main.cpp  run.sh
docs/: axi_writeuri_cu_comentariu.txt
include/: XpuDriver.h  XpuL0OnnxGraph.h  XpuL0Ort.h  XpuL1Library.h  XpuL1OnnxRuntime.h  XpuL2Driver.h  XpuL2Resolver.h  XpuL3Library.h  XpuL4Driver.h  XpuOrt.h
include/xpu/: XpuDriver.h  XpuOrt.h
lib/: libxpu.json
src/: XpuDriver.cpp  XpuDriver.h  XpuL0OnnxGraph.cpp  XpuL0Ort.cpp  XpuL1Library.cpp  XpuL1OnnxRuntime.cpp  XpuL2Driver.cpp  XpuL2Resolver.cpp  XpuL3Library.cpp  XpuL4Driver.cpp  XpuOrt.cpp  XpuOrt.h  main.cpp
xpu/: XpuDriver.cpp  XpuOrt.cpp
